--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,16 @@
     height: 50px;
     font-size: 1.2rem;
     border-radius: 5px;
-    border: 1px solid black;
-    background-color: #8cd3ff;
+    background-color: #3f97bc;
     color: white;
+    border: none;
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 5px;
   }
   
   .btn:hover {
-    background-color: white;
-    color: #8cd3ff;
+    background-color: #1bb7fa;
+    color: black;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     transition: all 300ms;
     border: gray;
