--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+.{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .btn {
     margin-top: 2rem;
     width: 150px;
@@ -24,4 +29,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+  .h1{
+    text-align: center;
+    color:red;
   }
